# OmniAssist-AI

./: .gitignore  README.md  alembic.ini  compare_providers.py  problem-statement.md  project_structure.txt  pyproject.toml  requirements.txt  rules.md
.github/workflows/: agentcare-checks.yml
alembic/: env.py
alembic/versions/: 1e35ad531053_initial_schema.py  44a0af2fd2ab_add_agentcare_core.py  45f6853967af_add_patient_profile_fields.py
backend/: .env.example
backend/app/: main.py
backend/app/agents/: __init__.py  appointment_agent.py  coordinator_agent.py  document_agent.py  follow_up_agent.py  routing_agent.py  safety_agent.py
backend/app/config/: settings.py
backend/app/core/: auth.py  authorization.py  jwt.py  logger.py
backend/app/database/: dependencies.py  session.py
backend/app/models/: __init__.py  conversation.py  healthcare.py  message.py  user.py
backend/app/providers/: base_provider.py  huggingface_provider.py  model_selector.py  (+3 more)
backend/scripts/: __init__.py  seed_demo.py
backend/tests/: test_agentcare_agents.py  test_healthcare_api.py  test_healthcare_persistence.py
finetuning/: README.md  requirements-omnift-colab.txt  requirements.txt
finetuning/evaluation/: prompts.json
finetuning/notebooks/: 01_dataset_pipeline.ipynb  02_instruction_finetuning.ipynb  03_dpo_alignment.ipynb  04_inference_and_evaluation.ipynb
finetuning/reports/: base_model_evaluation.md  final_evaluation.md  fine_tuning_explanation.md  sft_model_comparison.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
(+90 files in other folders)
