[project]
name = "omniassist-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.15"
dependencies = [
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "huggingface-hub>=1.21.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
