[project]
name = "omniassist-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.15"
dependencies = [
    "alembic>=1.14.0",
    "email-validator>=2.2.0",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "huggingface-hub>=1.21.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "psycopg[binary]>=3.2.0",
    "pwdlib[argon2]>=0.2.1",
    "PyJWT>=2.10.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "pytest>=8.0.0",
    "openai>=1.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.49.0",
]
